buzz-graphana/deployment/grafana/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
  name: dashboard-ingress
  namespace: monitoring
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
       # path: /dashboard/dialogic/(_matrix/client/.*)
       # path: /buzz/dashboard(/|$)(.*)
        path: /buzz/dashboard
